Fix image spacing

--- a/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
@@ -4,11 +4,15 @@
 	.wp-block-gallery,
 	.wp-block-image {
 		margin-top: 40px;
-		margin-bottom: 40px;
+		margin-bottom: 16px;
 
 		@include break-mobile() {
 			margin-top: 70px;
-			margin-bottom: 70px;
+			margin-bottom: 46px;
+		}
+
+		&:first-child {
+			margin-top: 0;
 		}
 	}
 }
